@@ -1,4 +1,5 @@
 import { Component, OnInit } from '@angular/core';
+import { Router, RouterModule } from '@angular/router';
 import { AppNotification } from 'app/@core/data/notifications';
 import { NotificationsService } from 'app/services/notifications.service';
 
@@ -11,7 +12,8 @@ export class NotificationsComponent implements OnInit {
 
   notifications: AppNotification[]
   constructor(
-    private notS: NotificationsService
+    private notS: NotificationsService,
+    private router: Router
   ) { }
 
   ngOnInit(): void {
@@ -21,4 +23,10 @@ export class NotificationsComponent implements OnInit {
   init() {
     this.notifications = this.notS.UserNotifications.sort((a, b) => b.timestamp - a.timestamp)
   }
+
+  view(route) {
+    console.log(route)
+    this.router.navigateByUrl(route)
+  }
 }
+
